get id from textarea component

--- a/src/app/modules/home/articles/create-article/textarea/textarea.component.html
+++ b/src/app/modules/home/articles/create-article/textarea/textarea.component.html
@@ -1,17 +1,17 @@
 <div #divTextAreaRef class="textAreaCss">
-  <button #buttonAreaRef class="choseButton" (click)="selectOptions()">
+  <button #buttonAreaRef class="choseButton">
     <span style="color: rgba(0, 0, 0, .4);">
       <i class="fas fa-plus"></i>
     </span>
   </button>
   <div #divSelectOptions class="divSelectOptions">
-    <button #buttonAreaRef class="selectOptionsButton">
+    <button #buttonCamRef class="selectOptionsButton" (click)="createFigureComponent()">
       <span style="color: rgba(0, 0, 0, .4);">
         <i class="fas fa-camera"></i>
       </span>
     </button>
 
-    <button #buttonAreaRef class="selectOptionsButton">
+    <button #buttonGitHubRef class="selectOptionsButton">
       <span style="color: rgba(0, 0, 0, .4);">
         <i class="fab fa-github"></i>
       </span>
