add github project icon

--- a/src/app/modules/home/articles/page-article/page-article.component.html
+++ b/src/app/modules/home/articles/page-article/page-article.component.html
@@ -14,6 +14,12 @@
           </span>
         </a>
       </div>
+      <div class="pageArticlGitHub">
+        <span class="pageArticlGitHubIcon">
+          <!-- <i class="fab fa-github fa-lg"></i> -->
+          <i class="fab fa-github"></i>
+        </span>
+      </div>
     </div>
   </aside>
   <div class="pageArticleContainer">
