--- a/src/app/modules/home/articles/page-article/page-article.component.css
+++ b/src/app/modules/home/articles/page-article/page-article.component.css
@@ -91,6 +91,7 @@
 }
 
 .pageArticleIcon {
+  height: 33px;
   vertical-align: middle;
   margin-left: .5rem;
   padding-top: 1px;
@@ -121,10 +122,6 @@
   transition: all ease-in-out .4s;
 }
 
-.pageArticleLike {
-  margin-bottom: .8rem;
-}
-
 .pageArticleLikesIcon {
   margin-left: -1.5px;
   font-size: 1.4rem;
@@ -140,12 +137,26 @@
 }
 
 .pageArticleFaceBook {
-  margin-bottom: .8rem;
+  vertical-align: middle;
+  height: 33px;
+  margin-top: .8rem;
 }
 
 .pageArticleFaceBookIcon {
   cursor: pointer;
   font-size: 1.4rem;
+  transition: all ease-in-out .4s;
+}
+
+.pageArticlGitHub {
+  vertical-align: middle;
+  height: 33px;
+  margin-top: .8rem;
+}
+
+.pageArticlGitHubIcon {
+  font-size: 1.4rem;
+  cursor: pointer;
   transition: all ease-in-out .4s;
 }
 
