--- a/src/app/modules/home/articles/create-article/create-article.component.css
+++ b/src/app/modules/home/articles/create-article/create-article.component.css
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   max-width: 50%;
+  height: 100%;
   padding-top: 3rem;
   padding-bottom: 2.5rem;
   margin-left: auto;
